<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/et_passwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:text="" />

    <TextView
        android:id="@+id/tv_passwd_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_validate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Input Password and click 'VALIDATE'" />

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_passwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="VALIDATE" />
</RelativeLayout>



